istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # istioのデフォルトのIngress Gatewayと連携
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # すべてのホストからのトラフィックを許可
